--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/src/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
